--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
   },
   "lint-staged": {
     "**/*.{tsx,ts,jsx,js}": [
-      "eslint --fix",
-      "prettier --write"
+      "eslint --fix"
     ]
   }
 }
