--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@monaco-editor/react": "^4.6.0",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "dotenv": "^16.4.5",
