--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -1,5 +1,3 @@
-# krmp-d2hub-idock.9rum.cc/dev-test/repo_eb44bb7abcfd:latest
-
 apiVersion: apps/v1
 kind: Deployment
 spec:
@@ -10,7 +8,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_eb44bb7abcfd:latest
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_8e8cd7b71051
           imagePullPolicy: Always
           ports:
             - containerPort: 5173
