♻️  refactor: selector 추가

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -3,6 +3,10 @@ kind: Deployment
 metadata:
   name: frontend-deployment
 spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: frontend
   template:
     metadata:
       labels:
