♻️  refactor: 도커 이미지 값 변경

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_eb44bb7abcfd:latest
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_8e8cd7b71051
           imagePullPolicy: Always
           ports:
             - containerPort: 5173
