♻️ refactor: 리소스 이름 변경

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -1,18 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: krampoline
+  name: frontend-deployment
+  labels:
+    app: frontend
 spec:
   selector:
     matchLabels:
-      app: krampoline
+      app: frontend
   template:
     metadata:
       labels:
-        app: krampoline
+        app: frontend
     spec:
       containers:
-        - name: krampoline
+        - name: frontend
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3bd5684acc5b
           imagePullPolicy: Always
           ports:
