--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: krampoline
+  name: frontend-service
 spec:
   ports:
     - port: 3000
       targetPort: 3000
   selector:
-    app: krampoline
+    app: frontend
