--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -1,9 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
-  labels:
-    app: frontend
+  name: frontend
 spec:
   selector:
     matchLabels:
@@ -15,7 +13,4 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_3bd5684acc5b
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 3000
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_d1e7fba0706d
