♻️ refactor: 도커 이미지 값 변경

--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -13,4 +13,5 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_d1e7fba0706d
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_ca6031cf8962
+          imagePullPolicy: Always
