--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,4 +13,5 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_f1b770af91db
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_b088912005ba
+          imagePullPolicy: Always
