feat: 도커파일, 쿠버네티스 설정 (#29)
* ♻️ refactor: 도커 파일 설정 및 vite 설정

* ♻️ refactor: 도커 이미지 값 변경

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,9 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: frontend-deployment
+  name: frontend
 spec:
-  replicas: 3
   selector:
     matchLabels:
       app: frontend
@@ -14,7 +13,5 @@ spec:
     spec:
       containers:
         - name: frontend
-          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_c5f1968dfd6e
+          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_b088912005ba
           imagePullPolicy: Always
-          ports:
-            - containerPort: 3000
