--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -3,6 +3,7 @@ kind: Ingress
 metadata:
   annotations:
     nginx.ingress.kubernetes.io/ssl-redirect: 'false'
+    nginx.ingress.kubernetes.io/proxy-body-size: '64m'
   labels:
     app.kubernetes.io/managed-by: kargocd
   name: krampoline
@@ -11,8 +12,8 @@ spec:
   rules:
     - http:
         paths:
-          - frontend:
-              serviceName: krampoline
+          - backend:
+              serviceName: frontend
               servicePort: 3000
               path: /
               pathType: Prefix
