--- a/.gitignore
+++ b/.gitignore
@@ -24,8 +24,8 @@ dist-ssr
 *.sw?
 
 # dotenv environment variable files
-.env
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# .env
+# .env.development.local
+# .env.test.local
+# .env.production.local
+# .env.local
