♻️ refactor: env 파일 수정

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-# VITE_BASE_URL=https://hlmg.me
-# VITE_SOCKET_BASE_URL=ws://hlmg.me/ws
-VITE_BASE_URL=https://kac33671a015da.user-app.krampoline.com
-VITE_SOCKET_BASE_URL=wss://kac33671a015da.user-app.krampoline.com/ws
+VITE_BASE_URL=https://hlmg.me
+VITE_SOCKET_BASE_URL=ws://hlmg.me/ws
+# VITE_BASE_URL=https://kac33671a015da.user-app.krampoline.com
+# VITE_SOCKET_BASE_URL=wss://kac33671a015da.user-app.krampoline.com/ws
 # https://kac33671a015da.user-app.krampoline.com
 # ws://kac33671a015da.user-app.krampoline.com/ws
 # wss://kac33671a015da.user-app.krampoline.com/ws
