--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,4 +14,4 @@ spec:
       containers:
         - name: frontend
           image: krmp-d2hub-idock.9rum.cc/dev-test/repo_0c663e1881ec
-          # imagePullPolicy: Always
+          imagePullPolicy: Always
