--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-VITE_BASE_URL=https://hlmg.me
-VITE_SOCKET_BASE_URL=ws://hlmg.me/ws 
-# VITE_BASE_URL=https://kac33671a015da.user-app.krampoline.com
-# VITE_SOCKET_BASE_URL=wss://kac33671a015da.user-app.krampoline.com/ws
+# VITE_BASE_URL=https://hlmg.me
+# VITE_SOCKET_BASE_URL=ws://hlmg.me/ws 
+VITE_BASE_URL=https://kac33671a015da.user-app.krampoline.com
+VITE_SOCKET_BASE_URL=wss://kac33671a015da.user-app.krampoline.com/ws
